# quantum-random-walks

./: .gitignore  README.md  RESULTS.md  compare_rl_spirals.py  dirac_1d.py  dirac_1d_4comp.py  dirac_reference.py  plot_mean_rl.py  pyproject.toml  requirements.txt  walk_1d  walk_adaptive  walk_evolve  walk_gen  walk_gen_old
.claude-memory/: MEMORY.md  feedback_chain_extension_uniqueness.md  feedback_chain_quasicrystal.md  feedback_checkpoint_memories.md  feedback_commit_changes.md  feedback_no_negated_directions.md  feedback_no_void_init.md  feedback_show_graph_paths.md  feedback_sym_no_factors.md  project_1d_helix_results.md  project_1d_scaling_rules.md  project_3d_walk_progress.md  project_bc_helix_cut_and_project.md  project_bc_helix_walk.md  project_current_thread.md  project_key_results.md  project_lattice_redesign.md  project_manifold_goal.md  project_manifold_walk_results.md  project_precomputed_blocks.md  project_pruning_plan.md  project_quasi_bloch_ic.md  project_quasi_bloch_results.md  project_shift_operator_approaches.md  project_symmetric_ic_plan.md  project_tau_approach.md  project_two_slit.md  project_u2_gauge_results.md  project_unitarity_findings.md  project_validation_tests.md  project_walk_parameters.md  reference_dlang_toolchain.md  user_profile.md
archive/: walk_evolve.c
data/: 600cell.mfd
dlang/: meson.build
dlang/source/: coarse_grid.d  dirac.d  geometry.d  interop_test.d  lattice.d  manifold_interop.d  manifold_walk_op.d  observables.d  operators.d  site_container.d  spatial_hash.d  symmetry.d  test_main.d  triangulation_walk.d  walk.d  walk_1d.d  walk_main.d
docs/: 1d_dirac_walk.md  1d_walk_scaling_rules.md  3d_dirac_walk_derivation.md  bc_helix_cut_and_project.md  results_summary.md
scripts/: a4_irrep_analysis.py  a4_sector_test.py  analyze_radial.py  build_optimal_ic.py  check_tau_projection.py  dirac_s3.py  dispersion_1d.py  dispersion_k0_sweep.py  dispersion_publication.py  exact_dispersion.npz  fourier_dispersion.py  manifold_diameter.py  manifold_early_spreading.py  manifold_kick_test.py  manifold_peak_tracking.py  manifold_radial_profile.py  manifold_spectrum.py  manifold_spreading.py  manifold_walk_driver.py  manifold_walk_test.py  mem_test.sh  min_steps_test.py  quasi_bloch.py  quasi_bloch_bands.npz  quasi_bloch_eigenvalue.py  quasi_bloch_ic.py  quasi_bloch_l1.py  quasi_bloch_operator.py  quasi_bloch_truncated.py  run_dispersion.sh  test_1d_drift.py  test_A_dispersion.py  test_B_propagation.py  test_C_symmetries.py  test_D2_combined_symmetries.py  test_D3_CPT_continuum.py  test_D_CPT_symmetries.py  test_D_dos.py  tet_quantum_channel.py  tet_spreading.py  (+4 more)
src/: dirac.py  helix_geometry.py  lattice3d.py  lattice_gen.c  manifold_walk.py  site_density.c  tau_operators.py  tetrahedron.py  triangulation.py  walk.py  walk_1d.c  walk_adaptive.c  walk_analysis.py  walk_evolve.c  walk_gen.c
tests/: test_dirac.py  test_dirac_d.py  test_dlang_interop.py  test_geometry_d.py  test_tau.py  test_walk.py  (+1 more)
(+52 files in other folders)
